AI Refactor for techsur-rfp-ai-service-development/src/main/java/solutions/techsur/rfpaiservice/service/impl/RequestForProposalDocumentServiceImpl.java:
Changes:
- Replaced import of `org.apache.logging.log4j.util.Strings` with `org.springframework.util.StringUtils` to avoid conflict and simplified utility usage.
- Simplified `getFileExtension` method to use standard Spring utility for filename rather than mixing different utilities.
- Improved null checks and added more explicit exception messages for better debugging.
- Replaced deprecated stream `.toList` method (Java 16+) with `.collect(Collectors.toList)` for compatibility with earlier Java versions.
- Added explicit type parameter to `Collectors.toMap` for clarity.
- Improved variable naming in `uploadRFPDocument` stream mapping for readability.
- Added missing generic type imports and removed unused imports (`Keycloak` imported but not used anywhere meaningful in the methods, kept for constructor injection but no direct usage).
- Made the `validateMultipartFile` method more robust and consistent.
- Added comments where necessary to improve maintainability.
- Optimized imports for clarity and correctness.